# physicscoin

./: .gitignore  CONTRIBUTING.md  LICENSE  MATHEMATICAL_FOUNDATION.md  Makefile  README.md  batch_benchmark  consensus_demo  gossip_demo  p2p_demo  replay_demo  sharding_demo  test_consensus  test_conservation  test_exploration  test_performance  test_serialization  visualize.py  wal_demo
benchmarks/: batch_benchmark.c  benchmark_results.json  benchmark_suite.c  run_benchmarks
docs/: API.md  DEPLOYMENT.md  DEVLOG_2024-12-27.md  TESTNET_GUIDE.md  development_roadmap.md  next_priorities.md  performance_analysis.md  revolutionary_assessment_report.md  strategic_report.md  v2.2-development-summary.md  v2.3-release-notes.md  v2.3-testing-report.md  v2.4-completion-summary.md  v2.4-plan.md  whitepaper.md
include/: faucet.h  network_config.h  physicscoin.h  poc_consensus.h
scripts/: create_math_animation.py  p2p_demo.sh  p2p_test.sh  start-testnet.sh  stop-testnet.sh  testnet-node.sh
sdk/javascript/: README.md  package-lock.json  package.json  test-sdk.js  tsconfig.json
sdk/python/: README.md  pyproject.toml  test_sdk.py
sdk/python/physicscoin_sdk/: __init__.py  client.py  crypto.py  models.py  utils.py
src/api/: api.c  explorer_api.c
src/cli/: main.c
src/core/: batch.c  (+7 more)
tests/: consensus_demo.c  gossip_demo.c  network_demo.c  p2p_demo.c  replay_demo.c  sharding_demo.c  test_consensus.c  test_conservation.c  test_exploration.c  test_performance.c  test_poc_consensus.c  test_security.c  test_serialization.c  wal_demo.c
web/: package-lock.json  package.json
(+23 files in other folders)
